web-ui/src/main/webapp/app/css/custom.css
/* ... */
body ul {
	list-style: none;
	margin: 0px;
}

/* msglist */
.msglist {
	position: relative;
	width: 100%;
	height: 100%;
	margin: 0px;
}

.msglist .listing .jspVerticalBar {
	bottom: 0px;
	height: auto;
	top: 3px;
}

.show-placeholder-scrollbar .jspVerticalBar {
	right: -22px !important;
}

.msglist.docked .sidebar-left {
	min-width: 0px;
	width: 25px !important;
}

.msglist.docked .filter-list {
	display: none;
}

.msglist.docked .message-list-container {
	margin-left: 25px !important;
}

.msglist .message-list-container {
	position: absolute;
	right: 3px;
	width: auto !important;
	margin-left: 236px;
	top: 0px;
	bottom: 107px;
	left: 0px;
}

.msglist .message-list-container .jspContainer {
	width: 100% !important;
	height: 100% !important;
}

.msglist .message-list-container .jspPane {
	left: 0px !important;
	right: 22px !important;
	width: auto !important;
	height: 100%;
/*	width: 100% !important; */
}

/* jScrollPane */
.jspScrollable:focus {
	outline-color: transparent !important;
}

.jspPane {
	padding-top: 0px !important;
}

.jspTrack {
	position: absolute;
	height: 100% !important;
	top: 0px;
	bottom: 16px;
	width: 100%;
	background: transparent !important;
}

.jspVerticalBar {
	background: url(../img/sprites/scrollbar_middle.png) repeat-y !important;
	width: 16px !important;
}

.jspHorizontalBar {
	background: url(../img/sprites/scrollbar_middle_horiz.png) repeat-x !important;
	height: 10px !important;
}

.jspDrag {
	background-color: #fff !important;
	border: 1px solid #CBCBCB;
}

.jspArrow {
	border: 1px solid #cbcbcb;
}

.jspArrowUp {
	background: url(../img/sprites/ImageSprite.png) -81px -48px !important;
}

.jspArrowUp.disabled {
	background: url(../img/sprites/ImageSprite.png) -81px -32px !important;
}


.jspArrowDown {
	bottom: 0px;
	position: absolute;
	width: 100%;
	background: url(../img/sprites/ImageSprite.png) -65px -48px !important;
}

.jspArrowDown.disabled {
	background: url(../img/sprites/ImageSprite.png) -65px -32px !important;
}


/* results */
.results {
	margin: 4px 16px 4px 0px;
	position: relative;
	float: left;
	font-size: 11px;
	width: 100%;
	height: 100%;
}

.results-initial {
	height: auto;
	position: absolute;
	bottom: -1px;
	top: 0px;
	right: 0px;
}

.results .result {
	background-color: #fff;
	padding: 0px;
	cursor: pointer;
	color: #333;
	max-width: 100%;
	word-wrap: break-word;
}

.results .result:hover {
	background-color: #f6faff;
}

.results .result.active-multi {
	background-color: #e7eff9;
}

.results .result.active-single {
	background-color: #e7eff9;
}

.results .result.active-single .widget-main,
.results .result.active-multi .widget-main {
	color: #999;
	line-height: 14px;
}

.result .result-message-inner {
	margin-right: 43px;
	padding-top: 4px;
	padding-bottom: 8px;
}

.result .message-icons {
	color: rgb(155, 155, 155);
	font-size: 16px;
	text-align: right;
	height: 18px;
	width: 43px;
	padding-right: 2px;
	padding-top: 5px;
	padding-left: 5px;
}

.result .message-recipients-line {
	word-break: break-all;
	clear: left;
	padding-left: 47px;
	position: relative;
	height: 14px;
	line-height: 15px;
	margin-bottom: 3px;
	overflow: hidden;
	font-size: 12px;
}

.result .message-recipients {
	margin-top: 9px;
}

.result .message-first-line {
	font-family: 'Roboto Condensed', sans-serif;
	line-height: 21px;
	padding-right: 7px;
	font-size: 14px;
	font-weight: 700;
	word-break: break-all;
}

.result .message-second-line {
	word-break: break-all;
	font-weight: 700;
	font-family: 'Roboto Condensed', sans-serif;
	clear: left;
	color: #666;
	line-height:13px;
	padding-right: 7px;
	font-size: 14px;
	padding-top: 1px;
}

.result .preview {
	padding-left: 47px;
	font-size: 12px;
	padding-top: 2px;
	margin-top: 7px;
	text-align: justify;
	line-height: 14px;
}

.result .message-sender {
	max-width: 42%;
	height: 21px;
	overflow: hidden;
	word-break: break-all;
	min-width: 150px;
	padding-left: 3px;
	color: #666;
}

.result .message-stats {
	max-width: 55%;
}

.result .message-sender-address {
	color: #999;
}

.result .message-age {
	font-weight: 300;
	text-align: right;
/*
	width: 127px;
	max-width: 52%;
*/
	height: 20px;
	overflow: hidden;
	color: #999;
}

.to-content,
.bcc-content,
.cc-content {
	color: #999;
}

.result .message-date {
	text-align: right;
/*
	width: 100px;
	max-width: 55%;
*/
	overflow: hidden;
	height: 21px;
	margin-left: 1px;
	color: #666;
}

.result .message-subject {
	width: auto;
	padding-left: 5px;
	height: 19px;
	line-height: 17px;
	overflow: hidden;
	max-width: 90%;
}

.result .message-size {
	line-height: 18px;
	color: #666;
	width: 41px;
	font-size: 16px;
	padding-top: 0px;
	font-weight: 300;
	padding-left: 5px;
}

.result .message-sender,
.result .message-subject,
.result .message-date { 
	font-size: 16px;
}

.result .message-flag {
	width: 40px;
	padding-left: 18px;
	max-width: 40px;
	font-size: 16px;
	color: rgb(155, 155, 155);
}

.result .checkmark {
	width: 18px;
	max-width: 18px;
	padding-left: 2px;
	padding-right: 3px;
	background-color: transparent;
	color: rgb(158, 157, 157);
	position: absolute;
	top: 0px;
	bottom: 0px;
	right: 0px;
}

.result .checkmark-icon {
	margin-top: -7px;
	position: absolute;
	top: 50%;
}

.result .checkmark:hover {
	background-color: #2e68b1;
	visibility: visible;
	color: #fff;
}

.result:hover .checkmark {
	visibility: visible;
}

.result.active-single .checkmark, 
.result.active-single:hover .checkmark {
	background-color: #2e68b1;
	visibility: visible;
}

.result.active-multi .checkmark, 
.result.active-multi:hover .checkmark {
	background-color: #2e68b1;
	visibility: visible;
}

.result .dropdown-header {
	padding: 0px;
}

.result .collapsed .widget-body,
.result .collapsed .widget-body-inner {
	display: block !important;
}

.result .widget-header {
	font-size: 11px;
	padding-top: 1px;
	line-height: 0px;
	padding-right: 5px;
}

.result .widget-toolbar > a {
	line-height: 10px;
	font-size: 11px;
}
/* ... */

